--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <section>
 
-<p>I challenge Tim Broos to build a Maze game with no other then Pick Rick as the protagonist.</p>
+<p>I challenge Tim Broos to build a Maze game with no other then Pickle Rick as the protagonist.</p>
 
 </section>
 
